Sat Feb 26 14:24:07 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/pi.mpb:
        
          Reverting the earlier change. There are some libraries that
          partially depend on PI, and so they can tolerate not having
          interceptors and still function. For example TAO_Strategies.

Sat Feb 26 03:27:16 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/endpointpolicy.mpb:
        * MPC/config/pi.mpb:

          Ensure that projects that depend on these do not get built in
          minimim, compact, or micro configurations.

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Do not attept to run the tests that don't get built by the above
          build restrictions.

Wed Feb 23 10:34:17 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/Connector_Impl.cpp:
        * tao/IIOP_Connector.cpp:
        * tao/IIOP_Connector.h:
        * tao/Strategies/UIOP_Connector.cpp:
        * tao/Strategies/SHMIOP_Connector.h:
        * tao/Strategies/UIOP_Connector.h:
        * tao/Strategies/SCIOP_Connector.h:
        * tao/Strategies/SHMIOP_Connector.cpp:
        * tao/Strategies/SCIOP_Connector.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
        * orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connector.h:
        * orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connector.cpp:
          Fixed use of ACE default reactor on the client side. TAO has own
          reactor associated with ORB which can be used instead of the default
          one.

Thu Feb 17 15:21:30 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/PortableServer/Active_Object_Map.cpp:
          Another change to almost the same code. Now I found memory leaks
          during logging.

Tue Feb 16 11:15:00 UTC 2011  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp: